syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.aurigraph.v11.proto";
option java_outer_classname = "CryptoProto";

package aurigraph.v11;

import "google/protobuf/timestamp.proto";

// CryptoService - Quantum-resistant cryptography operations
service CryptoService {
    // Generate quantum-resistant key pair
    rpc GenerateKeyPair(KeyPairRequest) returns (KeyPairResponse);

    // Sign data with quantum-resistant signature
    rpc Sign(SignRequest) returns (SignResponse);

    // Verify quantum-resistant signature
    rpc Verify(VerifyRequest) returns (VerifyResponse);

    // Encrypt data with hybrid encryption
    rpc Encrypt(EncryptRequest) returns (EncryptResponse);

    // Decrypt data
    rpc Decrypt(DecryptRequest) returns (DecryptResponse);

    // Stream key rotation events
    rpc StreamKeyRotations(KeyRotationStreamRequest) returns (stream KeyRotationEvent);

    // Get cryptographic metrics
    rpc GetCryptoMetrics(CryptoMetricsRequest) returns (CryptoMetrics);
}

// Key generation algorithm
enum CryptoAlgorithm {
    CRYPTO_UNKNOWN = 0;
    DILITHIUM_5 = 1;      // NIST Level 5 signatures
    DILITHIUM_3 = 2;      // NIST Level 3 signatures
    KYBER_1024 = 3;       // NIST Level 5 KEM
    KYBER_768 = 4;        // NIST Level 3 KEM
    SPHINCS_256 = 5;      // Hash-based signatures
    FALCON_1024 = 6;      // Lattice-based signatures
    HYBRID_ECDSA_DILITHIUM = 7;  // Hybrid classical + PQC
}

// Key pair generation request
message KeyPairRequest {
    CryptoAlgorithm algorithm = 1;
    string key_id = 2;
    string owner_id = 3;
    int32 security_level = 4;  // 1-5, NIST security level
    map<string, string> metadata = 5;
    google.protobuf.Timestamp expiry = 6;
}

// Key pair response
message KeyPairResponse {
    string key_id = 1;
    bytes public_key = 2;
    bytes encrypted_private_key = 3;  // Encrypted at rest
    CryptoAlgorithm algorithm = 4;
    int32 key_size_bits = 5;
    bool success = 6;
    string error_message = 7;
    google.protobuf.Timestamp generated_at = 8;
    google.protobuf.Timestamp expires_at = 9;
    KeyMetadata metadata = 10;
}

// Key metadata
message KeyMetadata {
    string key_id = 1;
    string owner_id = 2;
    CryptoAlgorithm algorithm = 3;
    int32 security_level = 4;
    string status = 5;  // ACTIVE, ROTATED, REVOKED, EXPIRED
    int64 usage_count = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp last_used = 8;
    google.protobuf.Timestamp expires_at = 9;
}

// Sign request
message SignRequest {
    bytes data = 1;
    string key_id = 2;
    bytes private_key = 3;  // Optional, if not using key_id
    CryptoAlgorithm algorithm = 4;
    string context = 5;  // Domain separation
    bool include_timestamp = 6;
}

// Sign response
message SignResponse {
    bytes signature = 1;
    string key_id = 2;
    CryptoAlgorithm algorithm = 3;
    int32 signature_size_bytes = 4;
    bool success = 5;
    string error_message = 6;
    google.protobuf.Timestamp signed_at = 7;
    int64 signing_time_ns = 8;  // Performance metric
}

// Verify request
message VerifyRequest {
    bytes data = 1;
    bytes signature = 2;
    bytes public_key = 3;
    string key_id = 4;  // Alternative to public_key
    CryptoAlgorithm algorithm = 5;
    string context = 6;
}

// Verify response
message VerifyResponse {
    bool is_valid = 1;
    string key_id = 2;
    CryptoAlgorithm algorithm = 3;
    string error_message = 4;
    google.protobuf.Timestamp verified_at = 5;
    int64 verification_time_ns = 6;
}

// Encrypt request
message EncryptRequest {
    bytes plaintext = 1;
    bytes recipient_public_key = 2;
    string recipient_key_id = 3;
    CryptoAlgorithm algorithm = 4;
    bool use_hybrid = 5;  // Hybrid classical + PQC
    bytes additional_data = 6;  // AAD for AEAD
}

// Encrypt response
message EncryptResponse {
    bytes ciphertext = 1;
    bytes encapsulated_key = 2;  // KEM encapsulation
    bytes nonce = 3;
    CryptoAlgorithm algorithm = 4;
    int32 ciphertext_overhead_bytes = 5;
    bool success = 6;
    string error_message = 7;
    int64 encryption_time_ns = 8;
}

// Decrypt request
message DecryptRequest {
    bytes ciphertext = 1;
    bytes encapsulated_key = 2;
    bytes nonce = 3;
    bytes private_key = 4;
    string key_id = 5;
    CryptoAlgorithm algorithm = 6;
    bytes additional_data = 7;
}

// Decrypt response
message DecryptResponse {
    bytes plaintext = 1;
    bool success = 2;
    string error_message = 3;
    int64 decryption_time_ns = 4;
}

// Key rotation stream request
message KeyRotationStreamRequest {
    repeated string owner_ids = 1;
    repeated CryptoAlgorithm algorithms = 2;
    bool include_revocations = 3;
}

// Key rotation event
message KeyRotationEvent {
    string event_type = 1;  // ROTATION, REVOCATION, EXPIRY
    string old_key_id = 2;
    string new_key_id = 3;
    string owner_id = 4;
    CryptoAlgorithm algorithm = 5;
    string reason = 6;
    google.protobuf.Timestamp event_time = 7;
    KeyMetadata new_key_metadata = 8;
}

// Crypto metrics request
message CryptoMetricsRequest {
    google.protobuf.Timestamp from_time = 1;
    google.protobuf.Timestamp to_time = 2;
    repeated CryptoAlgorithm algorithms = 3;
}

// Crypto metrics
message CryptoMetrics {
    int64 total_signatures = 1;
    int64 total_verifications = 2;
    int64 total_encryptions = 3;
    int64 total_decryptions = 4;
    int64 total_keys_generated = 5;
    int64 active_keys = 6;
    int64 rotated_keys = 7;
    int64 revoked_keys = 8;
    map<string, AlgorithmMetrics> metrics_by_algorithm = 9;
    double average_sign_time_ms = 10;
    double average_verify_time_ms = 11;
    double average_encrypt_time_ms = 12;
    double average_decrypt_time_ms = 13;
    google.protobuf.Timestamp measurement_start = 14;
    google.protobuf.Timestamp measurement_end = 15;
}

// Algorithm-specific metrics
message AlgorithmMetrics {
    CryptoAlgorithm algorithm = 1;
    int64 operations_count = 2;
    double average_time_ms = 3;
    int64 success_count = 4;
    int64 failure_count = 5;
    int64 active_keys = 6;
}
